// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonalityArchetypeHeading renders component 1`] = `
<div
  className="container"
>
  <div
    className="details"
  >
    <div>
      <img
        alt="Cohort"
        src="https://cdn.traitify.com/icons/big-five/white/cohort.png"
      />
      <h2
        dangerouslySetInnerHTML={
          {
            "__html": "personality_heading, [object Object]",
          }
        }
      />
    </div>
    <p>
      You are up for trying novel tasks and considering new ideas. Steady and content with focusing attention on multiple projects at once, you may worry about how you are being perceived by others and want to manage your reputation.
    </p>
  </div>
  <div
    className="meaning"
  >
    <video
      controls={true}
      crossOrigin="anonymous"
      playsInline={true}
      poster="https://cdn.traitify.com/content/archetype-videos/Cohort.jpg"
    >
      <source
        src="https://cdn.traitify.com/content/archetype-videos/Cohort.mp4"
        type="video/mp4"
      />
      <track
        kind="captions"
        src="https://cdn.traitify.com/content/archetype-videos/Cohort.vtt"
      />
    </video>
  </div>
</div>
`;

exports[`PersonalityArchetypeHeading renders component in third person 1`] = `
<div
  className="container"
>
  <div
    className="details"
  >
    <div>
      <img
        alt="Cohort"
        src="https://cdn.traitify.com/icons/big-five/white/cohort.png"
      />
      <h2
        dangerouslySetInnerHTML={
          {
            "__html": "personality_heading_third_person, [object Object]",
          }
        }
      />
    </div>
    <p>
      Cohorts are up for trying novel tasks and considering new ideas. Steady and content with focusing attention on multiple projects at once, this candidate may worry about how they are being perceived by others and want to manage their reputation.
    </p>
  </div>
  <div
    className="meaning"
  >
    <video
      controls={true}
      crossOrigin="anonymous"
      playsInline={true}
      poster="https://cdn.traitify.com/content/archetype-videos/Cohort.jpg"
    >
      <source
        src="https://cdn.traitify.com/content/archetype-videos/Cohort.mp4"
        type="video/mp4"
      />
      <track
        kind="captions"
        src="https://cdn.traitify.com/content/archetype-videos/Cohort.vtt"
      />
    </video>
  </div>
</div>
`;

exports[`PersonalityArchetypeHeading renders component without badge 1`] = `
<div
  className="container"
>
  <div
    className="details"
  >
    <div>
      <h2
        dangerouslySetInnerHTML={
          {
            "__html": "personality_heading, [object Object]",
          }
        }
      />
    </div>
    <p>
      You are up for trying novel tasks and considering new ideas. Steady and content with focusing attention on multiple projects at once, you may worry about how you are being perceived by others and want to manage your reputation.
    </p>
  </div>
  <div
    className="meaning"
  >
    <video
      controls={true}
      crossOrigin="anonymous"
      playsInline={true}
      poster="https://cdn.traitify.com/content/archetype-videos/Cohort.jpg"
    >
      <source
        src="https://cdn.traitify.com/content/archetype-videos/Cohort.mp4"
        type="video/mp4"
      />
      <track
        kind="captions"
        src="https://cdn.traitify.com/content/archetype-videos/Cohort.vtt"
      />
    </video>
  </div>
</div>
`;

exports[`PersonalityArchetypeHeading renders explanation text as fallback for video 1`] = `
<div
  className="container"
>
  <div
    className="details"
  >
    <div>
      <img
        alt="Cohort"
        src="https://cdn.traitify.com/icons/big-five/white/cohort.png"
      />
      <h2
        dangerouslySetInnerHTML={
          {
            "__html": "personality_heading, [object Object]",
          }
        }
      />
    </div>
    <p>
      You are up for trying novel tasks and considering new ideas. Steady and content with focusing attention on multiple projects at once, you may worry about how you are being perceived by others and want to manage your reputation.
    </p>
  </div>
  <div
    className="meaning"
  >
    <p
      dangerouslySetInnerHTML={
        {
          "__html": "archetype_description_html, [object Object]",
        }
      }
    />
  </div>
</div>
`;

exports[`PersonalityArchetypeHeading renders nothing if deck not ready 1`] = `null`;

exports[`PersonalityArchetypeHeading renders nothing if disabled 1`] = `null`;

exports[`PersonalityArchetypeHeading renders nothing if no archetype 1`] = `null`;

exports[`PersonalityArchetypeHeading renders nothing if results not ready 1`] = `null`;
